Fixed #21 Menu on mobile works only two clicks

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ Header
 .search-field{
 	width: 550px;
 	border-radius: 4px !important;
-	height: 31px !important;
+	height: 39px !important;
 	padding-top: 1px !important;
 	border: 1px solid #cf4f3a !important;
 }
@@ -524,7 +524,8 @@ Footer
 	margin-top: 9px;
 	vertical-align: top;
 }
-.header-search input[type=search] {
+.header-search input[type="search"],
+.header-search input[type="text"] {
 	padding-top: 3px !important;
 	padding-bottom: 3px !important;
 }
@@ -551,7 +552,8 @@ Footer
 	    font-size: 16px;
 	    line-height: 35px;
 	}
-	.header-search input[type="search"] {
+	.header-search input[type="search"],
+	.header-search input[type="text"] {
 		width: auto;
 	}
 
